# YDRP.chat

./: .eslintignore  .gitignore  README.md  code_base.md  commit_log.md  for_frontend_dev.md  main.py  package-lock.json  package.json  pyproject.toml  pyproject.toml.backup.1754680922  requirements.txt  run.sh  tailwind.config.ts  test_regex.py
.cursor/rules/: rules.mdc  signout.mdc
auth/: users.json  users_example.json
data/processed/: processed_policies_log.csv
data/raw/: crawled_policies_data.csv
data/raw/state/: crawler_state.json
project_docs/: high-level-overview.pptx
public/data/: featured-chats.json
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/chat/: page.tsx
src/app/history/: page.tsx
src/app/profile/: page.tsx
src/components/auth/: user-menu.tsx
src/components/chat/: chat-archive-dialog.tsx  chat-container.tsx  chat-context-menu.tsx  chat-footer-spacer.tsx  chat-history.tsx  chat-input.tsx  chat-message.tsx  chat-sidebar.tsx  message.tsx
src/components/home/: featured-chats.tsx
src/components/layout/: Navbar.tsx  (+1 more)
src/config/: site.ts
src/contexts/: AuthContext.tsx  ThemeContext.tsx
src/lib/: utils.ts
src/services/: api-client.ts  auth.ts  chat.ts  profile.ts  stream.ts
src/types/: index.ts
tests/data_collection/: test_collect_all.py  test_collect_one.py  test_crawler.py  test_scraper.py
utils/: collect_scripts.py  commit.py
ydrp_engine/: Database.md  README.md  pyproject.toml  requirements.txt
ydrp_engine/utils/: collect_scripts.py
ydrp_engine/ydrpolicy/backend/agent/: mcp_connection.py  system_prompt.py
ydrp_engine/ydrpolicy/backend/database/: init_db.py
ydrp_engine/ydrpolicy/backend/database/repository/: chats.py
ydrp_engine/ydrpolicy/backend/mcp/: server.py
ydrp_engine/ydrpolicy/backend/schemas/: chat.py
ydrp_engine/ydrpolicy/backend/scripts/: remove_policy.py
ydrp_engine/ydrpolicy/backend/services/: chat_service.py
ydrp_engine/ydrpolicy/data_collection/: config.py  ingest_local_files.py  ingest_local_pdfs.py
ydrp_engine/ydrpolicy/data_collection/processors/: __init__.py  document_processor.py  llm_processor.py  pdf_processor.py
ydrp_engine/ydrpolicy/data_collection/utils/: __init__.py
ydrp_ui/: README.md  backend_update.md  eslint.config.mjs  frontend_manual.md  package-lock.json
ydrp_ui/src/: CHANGELOG.md
ydrpolicy/: logging_setup.py
ydrpolicy/backend/: api_main.py  config.py  dependencies.py  logger.py
ydrpolicy/data_collection/: __init__.py  collect_policies.py  config.py  ingest_local_files.py  ingest_local_pdfs.py  logger.py
(+234 files in other folders)
