[tool.black]

line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  | .venv
)/
'''
[project]
name = "ydrp_engine"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "asyncpg>=0.29.0",
    "bcrypt==4.0.1",
    "black>=25.1.0",
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "fastapi>=0.110.0",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "libtmux>=0.46.1",
    "litellm>=1.63.11",
    "markdownify>=1.1.0",
    "mcp>=1.2.0",
    "openai>=1.20.0",
    "openai-agents>=0.0.7",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "pgvector>=0.2.4",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.0.0",
    "pypdf>=5.4.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.0",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "selenium>=4.29.0",
    "sqlalchemy>=2.0.0",
    "starlette>=0.46.1",
    "typer[all]>=0.15.2",
    "uvicorn[standard]>=0.34.0",
]
